Update LabGraph & Cthulhu Load Testing.ipynb

--- a/docs/performance/LabGraph & Cthulhu Load Testing.ipynb
+++ b/docs/performance/LabGraph & Cthulhu Load Testing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "84ab1ca2",
+   "id": "f9354611",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c9f533a",
+   "id": "74bd3c19",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change DATA_DIR to the folder path containing h5 files\n",
     "DATA_DIR = \"\"\n",
     "\n",
+    "# The data used for the notebook can be downloaded from here: \n",
+    "# https://drive.google.com/drive/u/1/folders/1isCB88Nlhe4oeB_R8iezUdEkGL-ZGgRv\n",
     "RECORDING_FILENAMES = {\n",
     "    (\"linux\", \"c++\"): \"load_test_cpp_linux.h5\",\n",
     "    (\"linux\", \"python\"): \"load_test_python_linux.h5\",\n",
@@ -50,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b648b473",
+   "id": "9971ea11",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c277f157",
+   "id": "a1d93933",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "813c3f7b",
+   "id": "6c6f6dcd",
    "metadata": {},
    "outputs": [
     {
