Fix typos in input_example.ipynb

--- a/devices/webcam/pose_vis/gesture/hand/input_example.ipynb
+++ b/devices/webcam/pose_vis/gesture/hand/input_example.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "MediaPipe generates a 21-point skeleton:\n",
     "\n",
-    "[!skeleton](https://mediapipe.dev/images/mobile/hand_landmarks.png)"
+    "![skeleton](https://mediapipe.dev/images/mobile/hand_landmarks.png)"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "# Adding Hand Vertices\n",
     "\n",
-    "The included gestures are a 21-point list of vertices, and the annotator expects the hands to be as well. It's hard to do this manually, so I recorded two poses with `gesture_vis.py`, and we'll load that data. All units are in milimeters, with their origin being the approximate geometric center of the hand. Find out more at the (MediaPipe documentation)[https://google.github.io/mediapipe/solutions/hands.html#multi_hand_world_landmarks]."
+    "The included gestures are a 21-point list of vertices, and the annotator expects the hands to be as well. It's hard to do this manually, so I recorded two poses with `gesture_vis.py`, and we'll load that data. All units are in milimeters, with their origin being the approximate geometric center of the hand. Find out more at the [MediaPipe documentation](https://google.github.io/mediapipe/solutions/hands.html#multi_hand_world_landmarks)."
    ]
   },
   {
@@ -295,7 +295,7 @@
     "annotation.set_hand_vertices(1, np.asarray(json.loads(pose_2)))\n",
     "\n",
     "# When using annotation for videos and real time streaming, you'd use annotation.set_hand_vertices() to update each hand's vertices once per frame\n",
-    "# while using annotation.clear_hand_vertices() beforehand to cleanup"
+    "# while using annotation.clear_hand_vertices() beforehand if needed"
    ]
   },
   {
@@ -393,7 +393,6 @@
    ],
    "source": [
     "# And the second pose\n",
-    "\n",
     "fig, ax = annotation.configure_plot()\n",
     "annotation.plot_hand(1, ax, drawing_order, bounds, xyz_order=xyz_order, xyz_scale=xyz_scale)\n",
     "plt.show()"
