Changed description of Ego4d_AudioVisual.ipynb

--- a/extensions/labgraph_diarization/Ego4D_AudioVisual.ipynb
+++ b/extensions/labgraph_diarization/Ego4D_AudioVisual.ipynb
@@ -7,20 +7,20 @@
       },
       "source": [
         "**EGO4D Audio-Visual Diarization Benchmark**\n",
-        "- This notebook allows a quickstart into the EGO4D Audio Visual Repo\n",
+        "- This notebook allows a quickstart into the EGO4D Audio Visual Repo, https://github.com/EGO4D/audio-visual/blob/main/diarization/audio-visual/README.md\n",
         "- It runs a subset of video clips from the EGO4D dataset in EGO4D's Audio-Visual repo\n",
         "- Hardware accelerator could be T4GPU, V100 or A100 GPU\n",
-        "- Some changes to the code have been made in the forked repo so that it could be compatible with Google Colab, the changes are commented out and are reversible"
+        "- Some changes to the code have been made in the forked repo so that it could be compatible with Google Colab"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Install Dependencies"
-      ],
       "metadata": {
         "id": "hIBjA7mUpK4F"
-      }
+      },
+      "source": [
+        "##Install Dependencies"
+      ]
     },
     {
       "cell_type": "code",
@@ -56,12 +56,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Clone Repository & download the videos"
-      ],
       "metadata": {
         "id": "fbt09eafpoET"
-      }
+      },
+      "source": [
+        "##Clone Repository & download the videos"
+      ]
     },
     {
       "cell_type": "code",
@@ -106,21 +106,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#EGO4D Audio-Visual Diarization Baseline"
-      ],
       "metadata": {
         "id": "Mlbjm9kPvqLr"
-      }
+      },
+      "source": [
+        "#EGO4D Audio-Visual Diarization Baseline"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Preprocess ground truth data"
-      ],
       "metadata": {
         "id": "d4opZblNpyHC"
-      }
+      },
+      "source": [
+        "##Preprocess ground truth data"
+      ]
     },
     {
       "cell_type": "code",
@@ -143,21 +143,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jt7yzV648gOr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "jt7yzV648gOr",
         "outputId": "acf51bc2-fb54-4769-c20a-5e7d1b53d25f"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/egocentric/audio-visual/utils/ground_truth\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#Run visualize_ground_truth.py (It downloads the output video to the current directory)\n",
         "%cd /content/egocentric/audio-visual/utils/ground_truth/\n",
@@ -166,21 +158,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Localization & Tracking"
-      ],
       "metadata": {
         "id": "c2fNByhuqTHn"
-      }
+      },
+      "source": [
+        "##Localization & Tracking"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###People Detection Setup"
-      ],
       "metadata": {
         "id": "ZPQT5dMUqZjo"
-      }
+      },
+      "source": [
+        "###People Detection Setup"
+      ]
     },
     {
       "cell_type": "code",
@@ -213,12 +205,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Short Term Tracking"
-      ],
       "metadata": {
         "id": "vqidCROwqfJA"
-      }
+      },
+      "source": [
+        "###Short Term Tracking"
+      ]
     },
     {
       "cell_type": "code",
@@ -247,12 +239,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Run Global People Tracking"
-      ],
       "metadata": {
         "id": "jIfxzYDgqlkf"
-      }
+      },
+      "source": [
+        "###Run Global People Tracking"
+      ]
     },
     {
       "cell_type": "code",
@@ -269,12 +261,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Voice Activity Detection (VAD)"
-      ],
       "metadata": {
         "id": "uG8NV_oUrDZY"
-      }
+      },
+      "source": [
+        "##Voice Activity Detection (VAD)"
+      ]
     },
     {
       "cell_type": "code",
@@ -292,21 +284,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Active Speaker Detection (ASD)"
-      ],
       "metadata": {
         "id": "rVr2OzKIrRBY"
-      }
+      },
+      "source": [
+        "##Active Speaker Detection (ASD)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "####Mouth Region Classification (MRC)"
-      ],
       "metadata": {
         "id": "2BN1eTm_rePW"
-      }
+      },
+      "source": [
+        "####Mouth Region Classification (MRC)"
+      ]
     },
     {
       "cell_type": "code",
@@ -350,12 +342,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Audio Embedding"
-      ],
       "metadata": {
         "id": "PY4Mha_QrjV-"
-      }
+      },
+      "source": [
+        "##Audio Embedding"
+      ]
     },
     {
       "cell_type": "code",
@@ -372,21 +364,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Device wearer voice activity detection"
-      ],
       "metadata": {
         "id": "XXUYRiQ1rueJ"
-      }
+      },
+      "source": [
+        "##Device wearer voice activity detection"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "####Energy Based Method"
-      ],
       "metadata": {
         "id": "kssnc4VNr4ra"
-      }
+      },
+      "source": [
+        "####Energy Based Method"
+      ]
     },
     {
       "cell_type": "code",
@@ -404,12 +396,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Surrounding people voice matching (MRC)"
-      ],
       "metadata": {
         "id": "pQnNzUoasJjx"
-      }
+      },
+      "source": [
+        "##Surrounding people voice matching (MRC)"
+      ]
     },
     {
       "cell_type": "code",
@@ -521,8 +513,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "V100"
+      "gpuType": "V100",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
