--- a/extensions/labgraph_diarization/Ego4D_AudioVisual.ipynb
+++ b/extensions/labgraph_diarization/Ego4D_AudioVisual.ipynb
@@ -9,7 +9,7 @@
         "**EGO4D Audio-Visual Diarization Benchmark**\n",
         "- This notebook allows a quickstart into the EGO4D Audio Visual Repo, https://github.com/EGO4D/audio-visual/blob/main/diarization/audio-visual/README.md\n",
         "- It runs a subset of video clips from the EGO4D dataset in EGO4D's Audio-Visual repo\n",
-        "- Hardware accelerator could be T4GPU, V100 or A100 GPU\n",
+        "- Hardware accelerator should be T4GPU\n",
         "- Some changes to the code have been made in the forked repo so that it could be compatible with Google Colab"
       ]
     },
@@ -37,21 +37,6 @@
         "!sudo apt install libgtk2.0-dev liblcm-dev\n",
         "!sudo apt-get install liblcm-dev\n",
         "!pip install pydub audiosegment"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "qssel_-R8d-d"
-      },
-      "outputs": [],
-      "source": [
-        "# Install libtorch\n",
-        "%cd /content/egocentric\n",
-        "!wget \"https://download.pytorch.org/libtorch/cu118/libtorch-cxx11-abi-shared-with-deps-2.1.0%2Bcu118.zip\"\n",
-        "!unzip \"libtorch-cxx11-abi-shared-with-deps-2.1.0+cu118.zip\"\n",
-        "!rm -rf \"libtorch-cxx11-abi-shared-with-deps-2.1.0+cu118.zip\""
       ]
     },
     {
@@ -102,6 +87,19 @@
         "!ego4d -y --output_directory ./data  --datasets av_models clips annotations --benchmarks av --video_uid_file video_uids.txt\n",
         "!tar xf data/v2/av_models/pretrained_av_models.tar.gz\n",
         "!mv data/v2/annotations/* utils/ground_truth"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Install libtorch\n",
+        "%cd /content/egocentric\n",
+        "!wget \"https://download.pytorch.org/libtorch/cu118/libtorch-cxx11-abi-shared-with-deps-2.1.0%2Bcu118.zip\"\n",
+        "!unzip \"libtorch-cxx11-abi-shared-with-deps-2.1.0+cu118.zip\"\n",
+        "!rm -rf \"libtorch-cxx11-abi-shared-with-deps-2.1.0+cu118.zip\""
       ]
     },
     {
