--- a/extensions/labgraph_diarization/Ego4D_AudioVisual.ipynb
+++ b/extensions/labgraph_diarization/Ego4D_AudioVisual.ipynb
@@ -188,6 +188,9 @@
         "!sed -i '44s/.*/LDFLAGS+= `pkg-config --libs opencv4` -lstdc++/' Makefile\n",
         "!sed -i '45s/.*/COMMON+= `pkg-config --cflags opencv4`/' Makefile\n",
         "\n",
+        "#Specifying the arch\n",
+        "!sed -i '14s/.*/ARCH= -gencode arch=compute_75,code=sm_75/' Makefile\n",
+        "\n",
         "# Add missing headers required to build using opencv4\n",
         "# https://stackoverflow.com/questions/64885148/error-iplimage-does-not-name-a-type-when-trying-to-build-darknet-with-opencv\n",
         "!sed -i '3 i #include \"opencv2/core/core_c.h\"' src/image_opencv.cpp\n",
